# markoff-graph

./: .gitignore  LICENSE  MANIFEST.in  README.md  pyproject.toml  setup.py
.github/workflows/: publish.yml  wheels.yml
src/markoff_graph/: __init__.py  eig.py  libmarkoff.c  nx_export.py
tests/: test_basic.py
