[build-system]
requires = ["setuptools>=77", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "markoff-graph"
version = "0.0.3"
description = "Finite-field Markoff graph components"
readme = "README.md"
requires-python = ">=3.9"
license = "MIT"
license-files = ["LICENSE"]

[tool.setuptools]
package-dir = { "" = "src" }
packages = ["markoff_graph"]

[tool.setuptools.package-data]
markoff_graph = ["libmarkoff.c", "libmarkoff.so", "libmarkoff.dylib", "libmarkoff.dll"]

[tool.cibuildwheel]
build = "cp39-* cp310-* cp311-* cp312-* cp313-* cp314-*"
skip = "*-musllinux_* *-win32"
test-command = "python -m pytest {project}/tests"
test-requires = ["pytest"]
